# lab08

./: .gitmodules  CMakeLists.txt  Dockerfile
.github/workflows/: build.yml
tests/: test.cpp
